Fix banner image on mobile

--- a/assets/styl/components/portfolio.styl
+++ b/assets/styl/components/portfolio.styl
@@ -62,7 +62,7 @@
 
 .portfolio-details-header
     background #444
-    padding 20px
+    padding 20px 0
 
 .portfolio-details-title
     color #fff
@@ -96,6 +96,7 @@
 
 .portfolio-details-banner
     border 8px solid #999
+    box-sizing border-box
     margin-bottom 15px
 
 .portfolio-details-tags
